# nerf_grasping

./: .git-blame-ignore-revs  .gitignore  .gitmodules  .pre-commit-config.yaml  2023-08-16_train_nerfs.py  Create_NeRF_ACRONYM_Dataset.py  Create_NeRF_ACRONYM_Dataset_HDF5.py  FiLM_resnet_1d.py  README.md  TYLER_SCRATCH_11_supervised_learning.py  TYLER_SCRATCH_29_debug_experiment.py  TYLER_SCRATCH_41_mesh_Oy.py  TYLER_SCRATCH_41_nerf_centroid.py  Train_NeRF_Grasp_Metric.ipynb  Train_NeRF_Grasp_Metric.py  Train_NeRF_Grasp_Metric_Config.py  Visualize_NeRF_Mesh_Grasps.ipynb  Visualize_NeRF_Mesh_Grasps.py  checking.py  create_classes_for_all_urdfs.py  create_nerf_datasets_all_acronym_objs.py  diagrams.md  environment.yml  eval_grasps.py  eval_sampled_grasps.py  fov_test.py  gcloud-requirements.txt  generate_data.py  generate_grasps.py  get_mesh.py  grasp_opt.py  grasp_test.py  grasp_utils.py  grasping.ipynb  grasping_v2.ipynb  gymutils.py  ig_data_gen.ipynb  ik.py  ik_example.py  installs.txt  (+22 more)
Train_NeRF_Grasp_Metric_cfg/: config.yaml
cluster_scripts/: 2023-05-13_train_nerf_grasp_metric_args_2.py
grasp_data/: README.md  banana.npy  banana.pkl  banana_10.npy  banana_10.pkl  banana_100.0_diced.npy  banana_100.npy  banana_100.pkl  banana_100_diced.npy  banana_100_diced.pkl  banana_10_diced.npy  banana_200_diced.npy  banana_50.npy  banana_50.pkl  banana_50_diced.npy  banana_diced.npy  banana_grasp_data.npy  banana_grasp_data_full.npy  banana_nerf.npy  banana_nerf10l1.npy  banana_nerf_1.npy  banana_nerf_l1.npy  banana_nerf_l1.pkl  banana_nerf_l1_rs1.0.npy  banana_nerf_nors.npy  (+87 more)
(+8144 files in other folders)
