[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nerf_grasping"
version = "0.0.1"
description = "Repository for grasping with NeRFs"
readme = "README.md"
license = {text="Apache 2.0"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
]
dependencies = [
    "diffusers",
    "mujoco",
    "nerfstudio",
    "ninja",
    "numpy",
    "positional_encodings",
    "pypose",
    "pytorch_kinematics",
    "rich",
    "torch>=2.1.2+cu118",
    "torchinfo",
    "torchvision>=0.16.2+cu118",
    "transforms3d",
    "tyro",
    "urdf_parser_py",
    "wandb",
]

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[options]
dependency_links = [
    "https://download.pytorch.org/whl/cu118",
    "https://download.pytorch.org/whl/cu121",
]

[tool.setuptools.packages.find]
include = ["nerf_grasping"]
